stats.js - Changed button_selected to retain blue color in selected state. stats.css - changed pie_container to a class from id to fix alignment. stats.html - Fixed alignment issues.

--- a/static/styles/stats.css
+++ b/static/styles/stats.css
@@ -99,7 +99,7 @@ svg {
 }
 
 .analytics-btn {
-    padding: 5px 10px 5px 10px !important;
+    padding: 0px 10px 0px 10px !important;
     border-radius: 10px !important;
     border: 1px solid #ccc !important;
     background: transparent !important;
@@ -227,20 +227,20 @@ svg {
     margin-left: 50px;
 }
 
-#pie_container {
+.pie_container {
     text-align: center;
 }
 
 #pie_messages_sent_by_client {
     display: inline-block;
     vertical-align: top;
-    margin: 100px 40px 0px 0px;
+    margin: 50px 40px 50px 0px;
 }
 
 #pie_messages_sent_by_type {
     display: inline-block;
     vertical-align: top;
-    margin: 100px 0px 0px 0px;
+    margin: 50px 0px 50px 0px;
 }
 
 #pie_messages_sent_by_client_total {
